...
          showSeparator
          testID="settings-active-workout-visibility"
          title="Notifikasjoner"
        />
        <NavigationRow
          onPress={() => navigation.navigate('Data')}
          testID="settings-data"
          title="Dine data"
        />
      </ListContainer>
    </ScrollView>
  );
}
...
